# hpce-2014-cw4

./: CMakeLists.txt  aws_setup.md  cmake_setup.md  readme.md
include/: heat.hpp
opencl_sdk/include/CL/: cl.h  cl_ext.h  cl_gl.h  cl_gl_ext.h  cl_platform.h  opencl.h
src/: heat.cpp  make_world.cpp  render_world.cpp  step_world.cpp  test_opencl.cpp
